--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -116,8 +116,9 @@ height:50px;
 padding: 10px 6px;
 border-radius:4px;
 background: var(--color-bg-banner);
-color:#fff;
+color:black;
 font-size: 14px;
+font-weight:bold;
 }
 
 
