--- a/resources/css/responsiveness.css
+++ b/resources/css/responsiveness.css
@@ -236,18 +236,24 @@
   .top_header {
     padding: 4rem 2rem;
   }
+
   .hero-title {
     font-size: 2.3rem;
   }
 
   .btn-primary-action {
     font-size: 10px;
-    width: 50%;
+    width: 35%;
   }
 
   .btn-secondary-action {
     font-size: 10px;
-    width: 50%;
+    width: 35%;
+  }
+
+  .btn-nav-primary,
+  .btn-nav-secondary {
+    padding: 14px 26px;
   }
 }
 
@@ -260,15 +266,17 @@
 
   .btn-primary-action {
     font-size: 1rem;
-    width: 50%;
+    width: 40%;
     padding: 1rem;
   }
 
   .btn-secondary-action {
     font-size: 1rem;
-    width: 50%;
+    width: 40%;
     padding: 1rem;
   }
+
+
 }
 
 /* ===== RESPONSIVE HEADER SIZING ===== */
