--- a/resources/css/access.css
+++ b/resources/css/access.css
@@ -78,8 +78,8 @@
 
     /* Right column background image */
     .right-col {
-      background: url('../images/signup-bg.png') no-repeat center center;
-      background-size: cover;
+      /* background: url('../../public/images/signup-bg.png') no-repeat center center; */
+      background-size: contain;
       border-radius: 20px;
       min-height: 100vh;
     }
@@ -285,8 +285,7 @@ a
   left: 0;
   right: 0;
   bottom: 0;
-  background-image:
-    url("data:image/svg+xml,%3Csvg width='100' height='100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0,50 Q25,30 50,50 T100,50' stroke='rgba(255,255,255,0.3)' stroke-width='2' fill='none'/%3E%3C/svg%3E");
+  background-image: url('../../public/images/signup-bg.png');
   background-repeat: repeat;
   animation: waveAnimation 20s linear infinite;
 }
