--- a/resources/css/access.css
+++ b/resources/css/access.css
@@ -18,6 +18,7 @@
 .custom-form-group {
   position: relative;
   margin-bottom: 40px;
+
 }
 
 
@@ -40,7 +41,7 @@
 
 .form-control-custom {
   /* Inherit basic form control look but override for the design */
-  display: block;
+  display: block; /* changed from block to inline */
   width: 100%;
   padding: 1rem 1.25rem;
   /* Increased padding for the height shown */
@@ -484,4 +485,11 @@ a {
   to {
     opacity: 1;
   }
+}
+
+.nav-link
+{
+    color: #2B6870;
+    font-size:20px;
+    font-weight:700;
 }
