added new webpages

--- a/resources/css/dashboard.css
+++ b/resources/css/dashboard.css
@@ -390,11 +390,7 @@ main .container {
     border-radius: 18px;
     padding: 14px 15px;
     display: flex;
-<<<<<<< HEAD
-    /* justify-content: space-between; */
-=======
     justify-content: space-evenly;
->>>>>>> main
     align-items: center;
     box-shadow: 0 6px 18px rgba(15, 28, 36, .04);
     border: 1px solid #eef6fa;
@@ -443,13 +439,6 @@ main .container {
     font-size: 20px;
 }
 
-<<<<<<< HEAD
-.stat-meta
-{
-margin-left: 10px;
-}
-=======
->>>>>>> main
 
 .stat-meta .label {
     font-size: 18px;
@@ -1425,3 +1414,195 @@ margin-left: 10px;
     background-color: #004A53;
     color: #FFFFFF;
 }
+
+
+/* rating code */
+.rating-container {
+        gap: 32px;
+      }
+      .rating-header {
+        gap: 6px;
+      }
+      .rating-title {
+        font-family: "Fredoka", sans-serif;
+        color: #004a53;
+        font-size: 32px;
+        font-weight: 600;
+      }
+      .rating-subtitle {
+        font-size: 18px;
+        color: #1c1d1d;
+      }
+      .review-container {
+        gap: 58px;
+        border: 1px solid #004a53;
+        border-radius: 20px;
+        padding: 20px;
+      }
+      .review-header-title-container {
+        gap: 4px;
+      }
+      .review-header-title {
+        font-weight: 700;
+        color: #000;
+        font-size: 20px;
+      }
+      .review-header-subtitle {
+        color: #00252a;
+        font-size: 14px;
+      }
+      .gap {
+        gap: 4px;
+      }
+      .review-header-rating {
+        font-size: 16px;
+        color: #004a53;
+      }
+      .review-btn {
+        border: 1px solid #004a53;
+        border-radius: 8px;
+        padding: 8px 16px;
+        font-size: 16px;
+        color: #004a53;
+        font-family: "Lato", sans-serif;
+        background-color: transparent;
+        font-weight: 600;
+      }
+      .review-distribution {
+        font-size: 20px;
+        color: #000;
+        font-weight: 700;
+      }
+      .progress-bar {
+        width: 198px;
+        height: 6px;
+        border-radius: 3px;
+        background-color: #78787833;
+      }
+      .progress-bar-track {
+        background-color: #004a53;
+        height: 6px;
+        border-radius: 3px;
+      }
+
+
+      /* Admin Dashboard Subscription Plan */
+       .subscription-header {
+        gap: 12px;
+    }
+
+    .subscription-title {
+        font-size: 32px;
+        font-family: "Fredoka", sans-serif;
+        color: #004a53;
+        font-weight: bold;
+    }
+
+    .subscription-text {
+        font-size: 18px;
+        color: #1c1d1d;
+    }
+
+    .toggle-text {
+        font-size: 18px;
+        color: black;
+        font-weight: 600;
+    }
+
+    .toggle-container {
+        width: 68px;
+        height: 39px;
+        border: 1px solid #cbcbcb;
+        border-radius: 50rem;
+        display: flex;
+        align-items: center;
+        padding-inline: 5px;
+    }
+
+    .toggle-switch {
+        width: 28px;
+        height: 28px;
+        background-color: #FDAF22;
+        border-radius: 50%;
+    }
+
+    .toggle-label {
+        width: 63px;
+        height: 17px;
+        border: 1px solid #004a53;
+        font-size: 9px;
+        color: #004a53;
+        font-weight: 500;
+    }
+
+    .price-plan {
+        box-shadow: 6px 6px 54px 0 rgba(0, 0, 0, 0.10);
+        background-color: white;
+        padding: 20px 18px;
+        border-radius: 10px;
+        gap: 10px;
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .price-plan-header {
+        display: flex;
+        flex-direction: column;
+        gap: 4px;
+    }
+
+    .price-plan-title {
+        font-size: 20px;
+        font-weight: 700;
+        font-family: Arial, Helvetica, sans-serif;
+        color: #272727;
+    }
+
+    .price-plan-subtext {
+        font-size: 16px;
+        color: #6b6b6b;
+    }
+
+    .price-plan-price-container {
+        border: 1px solid #e5e6e7;
+        border-radius: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding-block: 24px;
+        color: #004a53;
+    }
+
+    .price-plan-price-large {
+        font-size: 48px;
+        font-weight: 700;
+    }
+
+    .price-plan-price-small {
+        font-size: 20px;
+        align-self: self-end;
+    }
+
+    .price-plan-list {
+        gap: 8px;
+    }
+
+    .price-plan-list-item {
+        font-size: 20px;
+        color: #6b6b6b;
+        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+        gap: 8px;
+        display: flex;
+        align-items: center;
+    }
+
+    .price-plan-btn {
+        width: 100%;
+        height: 60px;
+        border: 1px solid #004a53;
+        color: #004a53;
+        font-weight: 600;
+        background-color: transparent;
+        border-radius: 4px;
+    }
