--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -34,6 +34,26 @@ body {
   margin-bottom: 60px;
 }
 
+h4{
+  font-size: 32px;
+  color: var(--color-primary-button);
+  line-height: 120%;
+  font-weight: 600;
+}
+h6{
+  font-size: 24px;
+  color: #004A53;
+  font-weight: 600;
+}
+.primaryButton{
+  background-color: #FDAF22;
+  height: 60px;
+  padding: 16px 20px;
+  border-radius: 4px ;
+  color: #000F11;
+  font-size: 16px;
+  font-weight: 600;
+}
 
 /* Typography styles moved to Tailwind - see resources/css/app.css */
 
@@ -218,8 +238,7 @@ a.nav-link.active {
 }
 
 .product-section-bordered {
-  border-color: #FDAF22;
-  border-width: 2px;
+  border: 5px solid #FDAF22;
   border-radius: 10px;
 }
 
@@ -251,10 +270,19 @@ a.nav-link.active {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  
+}
+.achievement-label{
+  font-size: 26px;
+  text-align: center;
+  color: #F56824;
+  font-weight: 600;
+  max-width: 30ch;
+  margin-inline: auto;
+  padding-top: 50px;
 }
 
 .achievement-title {
-  margin-top: 130px;
   font-weight: bold;
 }
 
@@ -426,7 +454,6 @@ margin: 10px;
 
 
 .ourproduct2 {
-  border: 1px solid #000;
   margin: 50px 10px;
   border-radius: 30px;
   padding: 1.5rem;
