--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -53,6 +53,12 @@ h6{
   color: #000F11;
   font-size: 16px;
   font-weight: 600;
+  width: 275px;
+  border: none;
+}
+.greenBtn{
+  background-color: #004A53;
+  color: white;
 }
 
 /* Typography styles moved to Tailwind - see resources/css/app.css */
@@ -238,7 +244,7 @@ a.nav-link.active {
 }
 
 .product-section-bordered {
-  border: 5px solid #FDAF22;
+  border: 2px solid #FDAF22;
   border-radius: 10px;
 }
 
@@ -255,7 +261,6 @@ a.nav-link.active {
 .product-button-yellow {
   background-color: #FDAF22;
   color: var(--color-text-dark);
-  width: 100%;
   padding: 0.75rem;
 }
 
