--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -34,11 +34,12 @@ body {
   margin-bottom: 60px;
 }
 
-h4{
+h1{
   font-size: 32px;
   color: var(--color-primary-button);
   line-height: 120%;
   font-weight: 600;
+  font-family: 'Fredoka One', sans-serif;
 }
 h6{
   font-size: 24px;
